# code_challenges

./: .gitignore  README.md
gol_java/: Juego de la Vida.code-workspace  main.java
gol_java/src/: Cell.java  CellState.java  Coord.java  Matrix.java  graphics_.java  utils.java
gol_python/: main.py
maze_solver_a_star/: Cell.py  Coord.py  Map.py  main.py
what_the_name/: README.md  docker-compose.yml
what_the_name/backend/: main.py  pyproject.toml
what_the_name/backend/app/api/: name_parser.py
what_the_name/backend/app/core/: logging_config.py
what_the_name/backend/app/model/: contants.py  name_schema.py
what_the_name/backend/app/services/: parser_service.py
what_the_name/backend/poc/: countries.py  db_poc.py
what_the_name/frontend/: Dockerfile  package-lock.json  package.json
what_the_name/frontend/src/: App.tsx  index.css
what_the_name/frontend/src/components/: NameSplitter.tsx
