[tool.poetry]
name = "what_the_name"
version = "0.1.0"
description = "This web return the correct name of the person given"
authors = ["Daniel Saiz Azor <danielsaizor@gmail.com>"]
license = "MIT"
readme = "README.md"

package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.0"        # framework principal
uvicorn = {extras = ["standard"], version = "^0.24.0"}  # servidor ASGI
python-dotenv = "^1.1.1"    # opcional, para variables de entorno
jinja2 = "^3.1.3"           # templates HTML si los usamos
names-dataset = "^3.3.1"

[poetry.group.dev.dependencies]
pytest = "^7.4.0"           # testing
pytest-asyncio = "^0.21.0"  # testing async endpoints
black = "^24.10.0"          # formateo de código
isort = "^6.0.0"            # ordenar imports
mypy = "^1.5.2"             # type checking

[build-system]
requires = ["poetry-core>=1.6.0"]
build-backend = "poetry.core.masonry.api"
